--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.2",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
